force-app/main/default/objects/DocGen_Settings__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description
    >Company or organization name displayed in signature request emails and branding. Used as fallback when logo URL is not configured.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>