force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Email_Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Signature_Email_Brand_Color__c</fullName>
    <defaultValue>&quot;#0176D3&quot;</defaultValue>
    <description
    >Hex color code for the primary button and accent color in signature request emails. Default: Salesforce blue (#0176D3).</description>
    <label>Signature Email Brand Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>