force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Email_Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Signature_Email_Logo_Url__c</fullName>
    <description
    >URL to the company logo image displayed at the top of signature request emails. Recommended size: 200x60px.</description>
    <label>Signature Email Logo URL</label>
    <type>Url</type>
</CustomField>