force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Signature_Email_Message__c</fullName>
    <description>Custom message body for signature request emails. Supports merge fields: {SignerName}, {DocumentTitle}, {SenderName}. If blank, defaults to "[SenderName] has sent you a document that requires your signature:"</description>
    <label>Signature Email Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>