force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Signature_Email_Subject__c</fullName>
    <defaultValue>&quot;Action Required: Please Sign {DocumentTitle}&quot;</defaultValue>
    <description
    >Email subject line for signature requests. Supports merge fields: {DocumentTitle}, {SignerName}, {SenderName}. Default: "Action Required: Please Sign {DocumentTitle}"</description>
    <label>Signature Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>