force-app/main/default/objects/DocGen_Settings__c/fields/Signature_OWA_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_OWA_Id__c</fullName>
    <description>The ID of the Org-Wide Email Address used for signature request emails and PIN verification emails. If blank, emails are sent from the running user.</description>
    <label>Signature Org-Wide Email Address ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>