force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Reminder_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Signature_Reminder_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Reminders Enabled</label>
    <type>Checkbox</type>
</CustomField>