force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Reminder_Hours__c.field-meta.xml
<CustomField>
    <fullName>Signature_Reminder_Hours__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Signature Reminder After (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>